--- a/live.html
+++ b/live.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="controller" id="mydiv">
+    <div id="mydiv">
         <div id="mydivheader">Click here to move</div>
         <iframe id="url1" class="controller-iframe" frameborder="0" scrolling="no"></iframe>
     </div>
